--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <title>OpenROV Cockpit</title>
+        <title>Todd's OpenROV Cockpit</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/bootstrap-responsive.css" rel="stylesheet">        
         <link rel="stylesheet" href="themes/OpenROV/css/style.css">
