added three motor status icons, they spin and change color based on the current status

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -20,6 +20,9 @@
 		<div id="tiltstatus"></div>
 		<div id="lightoff" class="lightstatus"></div>
 		<div id="lighton" class="lightstatus off"></div>
+		<div id="starmotor" class="motor"></div>
+		<div id="vertmotor" class="motor"></div>
+		<div id="portmotor" class="motor"></div>
 		<script type='text/javascript' src="js/libs/jquery.min.js"></script>
 		<script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
 		<script type='text/javascript' src='js/utilities.js'></script>
