changed meter defaults

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -23,7 +23,7 @@
 		<div id="starmotor" class="motor"></div>
 		<div id="vertmotor" class="motor"></div>
 		<div id="portmotor" class="motor"></div>
-		<div id="vmeter" class="meter bar2">V</div>
+		<div id="vmeter" class="meter">V</div>
 		<div id="hmeter" class="meter">H</div>
 		<script type='text/javascript' src="js/libs/jquery.min.js"></script>
 		<script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
